<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateNewContactActivity">

    <ImageView
        android:id="@+id/image_select"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_baseline_person_24"
        android:contentDescription="@string/app_name" />

    <EditText
        android:id="@+id/name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_select"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/name"
        android:inputType="text"
        android:autofillHints="@null" />

    <EditText
        android:id="@+id/number"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/number"
        android:inputType="phone"
        android:autofillHints="@null" />

    <EditText
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/number"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="@null" />

</RelativeLayout>