<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ContactDetailsFragment">

    <RelativeLayout
        android:id="@+id/container_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_person_24" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:padding="15dp"
                android:text="@string/joe_test"
                android:textColor="@color/black"
                android:textSize="24sp" />
        </FrameLayout>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_below="@id/container_id"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="75dp">

            <ImageButton
                android:id="@+id/call_button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_local_phone_24" />

            <TextView
                android:id="@+id/number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="50dp"
                android:layout_toEndOf="@+id/call_button"
                android:padding="15dp"
                android:text="@string/number"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <ImageButton
                android:id="@+id/fast_message_button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_toStartOf="@id/message_button"
                android:background="@null"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_announcement_24" />

            <ImageButton
                android:id="@+id/message_button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_baseline_message_24" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="25dp"
        android:contentDescription="@string/app_name"
        android:minHeight="100dp"
        app:srcCompat="@drawable/ic_baseline_edit_24"
        app:tint="@color/white" />

</RelativeLayout>
